fix background bug on mobile devices

--- a/src/global.css
+++ b/src/global.css
@@ -1,7 +1,5 @@
 
 .Global {
-  min-height: 100vh;
-  background-color:rgb(50, 69, 70);
   color: rgb(255, 255, 255);
   font-family: monospace;
   letter-spacing: 0.04rem;
@@ -9,6 +7,5 @@
   @media only screen and (max-width: 1300px) {
     font-size: 0.8rem;
     letter-spacing: 0rem;
-    min-height: 230vh;
   }
 }
